objects/Contact.object
<CustomObject><fields>
<fields>
        <fullName>Certificate_Degree_Year__c</fullName>
        <label>Certificate Degree Year</label>
        <picklist>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1922</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1923</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1924</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1927</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1928</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1929</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1931</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1932</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1933</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1934</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1935</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1936</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1937</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1938</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1939</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1941</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1943</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1946</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1948</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1949</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Certificate_Degree__c</fullName>
        <label>Certificate Degree</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Certificate_Preferred_Year__c</fullName>
        <label>Certificate Preferred Year</label>
        <picklist>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Certificate_Program__c</fullName>
        <label>Certificate Program</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Year__c</fullName>
        <label>Class Year</label>
        <picklist>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1922</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1923</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1924</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1927</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1928</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1929</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1931</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1932</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1933</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1934</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1935</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1936</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1937</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1938</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1939</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1941</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1943</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1946</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1948</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1949</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Company_Location__c</fullName>
        <label>Company Location</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_me_about__c</fullName>
        <label>Contact me about</label>
        <picklist>
            <picklistValues>
                <fullName>Business Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>CoreID__c</fullName>
        <externalId>true</externalId>
        <label>CoreId</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Current_Share_Item__c</fullName>
        <label>Current Share Item</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>December__c</fullName>
        <label>Dec</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Degree1__c</fullName>
        <label>Degree1</label>
        <picklist>
            <picklistValues>
                <fullName>Master of Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master of Science in Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master of Science in Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Management Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor of Science</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Donor_Status__c</fullName>
        <label>Donor Status</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Employee_ID__c</fullName>
        <description>used as Great Plains external ID</description>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields><fields>
        <fullName>February__c</fullName>
        <label>Feb</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>First_Alumni_Club__c</fullName>
        <label>First Alumni Club</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni Club of Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Brazil - Rio de Janeiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Brazil - Sao Paulo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Cincinnati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of D.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Florida - Jacksonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Greater China - Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Greater China - Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of India - Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of India - Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of India - Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of India - New Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Club of Mexico - Mexico City</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Fiscal_Year_2013__c</fullName>
        <label>Fiscal Year - 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Fiscal_Year_2014__c</fullName>
        <label>Fiscal Year - 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Fiscal_Year_2015__c</fullName>
        <label>Fiscal Year - 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Following__c</fullName>
        <label>Following</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the "Volunteer Hours Reminder Email" workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Weekdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Computer usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscaping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Graduate_Degree__c</fullName>
        <label>Graduate Degree</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Graduate_Preferred_Year__c</fullName>
        <label>Graduate Preferred Year</label>
        <picklist>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Graduate_Program__c</fullName>
        <label>Graduate Program</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Graduate_Year__c</fullName>
        <label>Graduate Year</label>
        <picklist>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1922</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1923</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1924</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1925</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1927</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1928</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1929</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1931</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1932</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1933</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1934</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1935</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1936</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1937</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1938</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1939</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1941</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1943</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1946</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1948</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1949</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Home_Town_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Home_Town_Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Home_Town_State__c</fullName>
        <globalPicklist>State</globalPicklist>
        <label>State/Province</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Household_ID__c</fullName>
        <label>Household ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>    </validationRules></CustomObject>